# insuranceandtax

./: .gitignore  README.md  docker-compose.yml  project_specification.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  seed_admin.py
backend/alembic/: env.py
backend/alembic/versions/: 20260429_0001_initial.py
backend/app/: __main__.py  config.py  constants.py  database.py  main.py
backend/app/models/: __init__.py  admin.py  appointment.py  availability.py  sequence.py
backend/app/routers/: admin.py  appointments.py  availability.py  contact.py
backend/app/schemas/: common.py
backend/app/services/: booking_service.py  email_service.py
backend/app/utils/: auth.py  dependencies.py  timeparse.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/admin/: AdminSidebar.tsx  AppointmentDetailModal.tsx  AppointmentsTable.tsx  AvailabilityManager.tsx
frontend/src/config/: site.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAvailability.ts  useBooking.ts  useServiceNavItems.ts
frontend/src/i18n/: context.tsx  dictionary.ts
frontend/src/lib/: api.ts  constants.ts  timeSlots.ts
frontend/src/pages/: AdminLoginPage.tsx  BookingPage.tsx  BookingSuccessPage.tsx  ContactPage.tsx  HomePage.tsx  NotFoundPage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx
frontend/src/types/: index.ts
(+27 files in other folders)
