[project]
name = "insurance-tax-api"
version = "0.1.0"
description = "FastAPI backend for insurance & tax booking site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "bcrypt>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "resend>=2.0.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
